--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
+/* fonts must be imported above tailwindcss */
 
+ /* <weight>: Use a value from 100 to 900 */
 
+@layer base {
+  body {
+    font-family: 'Montserrat', sans-serif;
+    color: #525F80;
+    font-weight: 700;
+    background-color: #7FAFB0;
+  }
+}
+h1 {
+  font-size: 2em; /* 48px */
+}
+
+h2 {
+  font-size: 1.5em; /* 40px */
+}
+
+h3 {
+  font-size: 1em; /* 32px */
+}
+
+h4 {
+  font-size: 0.5em; /* 24px */
+}
+
+h5 {
+  font-size: 0.25em; /* 20px */
+}
+
+h6 {
+  font-size: 0.1em; /* 16px */
+}
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
